------------------------------------------------------------------------------
This file is used to record changes made to the CVS database. Please add to
the top of this file before committing any changes. Please use the header
format provided for each entry.

Al
------------------------------------------------------------------------------

Wed Mar 28 08:37 UTC 2001   Thomas McWilliams <tgm9999@yahoo.com>

	* Change broken definition of pid_t from unsigned to signed.

Mon Mar 26 16:29 UTC 2001   Thomas McWilliams <tgm9999@yahoo.com>

	* Fix long standing file system bug: EBUSY when unmounting,
	and related sys_access() bug.

Fri Mar 03 11:44 GMT 2000   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Final changes for 0.0.83

Tue Feb 29 11:00 GMT 2000   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Small change to setup.S to fix segment definitions for the
	ROM boot code contributed by Christian Mardmoller.

Sat Feb 26 19:23 GMT 2000   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Fixed bug in file descriptor macros which meant that
	file descriptors > 7 did not work in select.

Sat Feb 26 13:02 GMT 2000   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Fixed socket code that deals with disconnections which
	was only included for UNIX sockets, but is required by
	NANO sockets.

Fri Feb 25 15:05 GMT 2000   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Added swedish keyboard map submitted by Per Olofsson
	(MagerValp@cling.gu.se).

Tue Feb 22 15:45 GMT 2000   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Alterred default config to allow nano-X to run on standard
	kernel.

Mon Feb 21 23:38 GMT 2000   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Re-wrote tty input interrupt character code so it now
	works on serial ttys.

Fri Feb 19 19:38 GMT 2000   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Added raw keyboard mode for games support.

Mon Feb 14 10:25 GMT 2000   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Fix setting of effective uid and gid on suid and sgid